# pkedit

./: .gitignore  CMakeLists.txt  README.md  charset.h  items.c  main  main.c  offsets.h  savinfo.h
src/: charset.c  editsav.c  editsav.h  helpers.c  helpers.h  items.c  items.h  main.c  offsets.h  pkmnstructs.c  pkmnstructs.h  savinfo.c  savinfo.h  species.c  species.h
